gl33-master/src/test/deca/context/invalid/other/declaration_meme_nom_float_void.deca
// Invalid
// Déclaration des variables de même nom (float et void)


{
   float a;
   void a;
}
